--- a/application/views/login.html
+++ b/application/views/login.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="A fully featured admin theme which can be used to build CRM, CMS, etc.">
-        <meta name="author" content="Coderthemes">
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta name="description" content="Product Data Mining Tool">
+      <meta name="author" content="VirKill">
 
-        <link rel="shortcut icon" href="images/favicon_1.ico">
+      <link rel="shortcut icon" href="images/favicon_1.ico">
 
-        <title>Moltran - Responsive Admin Dashboard Template</title>
+      <title><?php echo MY_CONSTANT; ?> - Product Data Mining Tool</title>
 
         <!-- Base Css Files -->
         <link href="css/bootstrap.min.css" rel="stylesheet" />
@@ -36,22 +36,22 @@
         <![endif]-->
 
         <script src="js/modernizr.min.js"></script>
-        
+
     </head>
     <body>
 
 
         <div class="wrapper-page">
             <div class="panel panel-color panel-primary panel-pages">
-                <div class="panel-heading bg-img"> 
+                <div class="panel-heading bg-img">
                     <div class="bg-overlay"></div>
                     <h3 class="text-center m-t-10 text-white"> Sign In to <strong>Moltran</strong> </h3>
-                </div> 
+                </div>
 
 
                 <div class="panel-body">
                 <form class="form-horizontal m-t-20" action="index.html">
-                    
+
                     <div class="form-group ">
                         <div class="col-xs-12">
                             <input class="form-control input-lg " type="text" required="" placeholder="Username">
@@ -72,31 +72,22 @@
                                     Remember me
                                 </label>
                             </div>
-                            
+
                         </div>
                     </div>
-                    
+
                     <div class="form-group text-center m-t-40">
                         <div class="col-xs-12">
                             <button class="btn btn-primary btn-lg w-lg waves-effect waves-light" type="submit">Log In</button>
                         </div>
                     </div>
+                </form>
+                </div>
 
-                    <div class="form-group m-t-30">
-                        <div class="col-sm-7">
-                            <a href="recoverpw.html"><i class="fa fa-lock m-r-5"></i> Forgot your password?</a>
-                        </div>
-                        <div class="col-sm-5 text-right">
-                            <a href="register.html">Create an account</a>
-                        </div>
-                    </div>
-                </form> 
-                </div>                                 
-                
             </div>
         </div>
 
-        
+
     	<script>
             var resizefunc = [];
         </script>
@@ -114,6 +105,6 @@
 
         <!-- CUSTOM JS -->
         <script src="js/jquery.app.js"></script>
-	
+
 	</body>
 </html>
